testsuite/tests/backpack/should_fail/bkpfail27.stderr
[1 of 3] Processing p
  [1 of 2] Compiling H[sig]          (.hsig -> nothing)
  [2 of 2] Compiling M               (.hs -> nothing)
[2 of 3] Processing q
  Instantiating q
  [1 of 1] Compiling H               (.hs -> .o)
[3 of 3] Processing r
  Instantiating r
  [1 of 1] Including p[H=q:H]
    Instantiating p[H=q:H]
    [1 of 2] Compiling H[sig]          (.hsig -> .o)

bkpfail27.bkp:15:9: error:
    Type constructor ‘q:H.T’ has conflicting definitions in the module
    and its hsig file
    Main module: type q:H.T = q:H.F
    Hsig file:  skolem q:H.T
    Illegal type family application in implementation of abstract data.
